# tokay-lite-sdk

./: .gitmodules  README.md
.github/workflows/: main.yml  release.yml
ci/: build.sh
common/ext_rtc/: CMakeLists.txt  ext_rtc.c  ext_rtc.h
common/ltr303_als/: CMakeLists.txt  ltr303_als.c  ltr303_als.h
webserver/: CMakeLists.txt  partitions.csv  sdkconfig
webserver/main/: CMakeLists.txt  ai_camera.c  ai_camera.h  ai_pipeline.cpp  ai_pipeline.h  app_httpd.c  app_httpd.h  auto_mode.c  auto_mode.h  bsp.c  bsp.h  config.c  config.h  integrations.c  integrations.h  json_settings_helpers.c  json_settings_helpers.h  leds.c  leds.h  light_sensor.c  light_sensor.h  main.c  main.h  network.c  network.h  pir.c  pir.h  thingsboard.c  thingsboard.h  upload_io.c  upload_io.h
webserver/main/static/: index-themed.html  index.html  wifi_setup.html
webserver/main/static/assets/: core.css  helpers.js  menu.js
